src/test/ui/test-attrs/test-warns-dead-code.stderr
error: function is never used: `dead`
  --> $DIR/test-warns-dead-code.rs:5:1
   |
LL | fn dead() {}
   | ^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/test-warns-dead-code.rs:3:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to previous error

